--- a/InterviewApp/Views/PhoneModels/Index.cshtml
+++ b/InterviewApp/Views/PhoneModels/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<InterviewApp.Models.PhoneModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Phones";
 }
 
-<h1>Index</h1>
+<h1>Phones</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
